--- a/placas_yolo/placas.yaml
+++ b/placas_yolo/placas.yaml
@@ -1,18 +1,18 @@
-path: C:\Projetos\m3_YOLOv11\placas_yolo
+path: /home/leonardo/Projects/jibran/processamento-de-imagem/m3-yolo/m3_YOLOv11/placas_yolo
 train: images/train
 val: images/val
 test: images/test
 names:
-  0: '0'
-  1: '1'
-  2: '2'
-  3: '3'
-  4: '4'
-  5: '5'
-  6: '6'
-  7: '7'
-  8: '8'
-  9: '9'
+  0: "0"
+  1: "1"
+  2: "2"
+  3: "3"
+  4: "4"
+  5: "5"
+  6: "6"
+  7: "7"
+  8: "8"
+  9: "9"
   10: A
   11: B
   12: C
